text align fix

--- a/module-5/starr_EX4.css
+++ b/module-5/starr_EX4.css
@@ -66,3 +66,7 @@ figcaption{
     text-align: center;
 
 }
+
+figure{
+    text-align: center;
+}
